# yans

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
doc/charts/: Behavior  Genes-Characteristics  Genome.xml  Reproduction
yans-engine/: CMakeLists.txt  yans-engine.h.in
yans-engine/cmake/: source.cmake
yans-engine/cmake/source/: biota.cmake  data.cmake
yans-engine/src/biota/: Biota.cpp  Biota.h  Organism.cpp  Organism.h  Phenotype.cpp  Phenotype.h  Population.cpp  Population.h
yans-engine/src/biota/genos/: Allele.cpp  Allele.h  Gene.cpp  Gene.h  Genotype.cpp  Genotype.h  Operations.cpp  Operations.h  TypeGene.cpp  TypeGene.h
yans-engine/src/data/: ISerializable.cpp  ISerializable.h
yans-engine/src/view/: Camera.h
yans-launcher/: CMakeLists.txt  yans-launcher.qrc
yans-launcher/qml/: main.qml
yans-launcher/src/: main.cpp
yans-launcher/src/render/: ThreadRenderer.cpp  ThreadRenderer.h
yans-launcher/src/render/private/: LogoRenderer.cpp  LogoRenderer.h  RenderThread.cpp  RenderThread.h  TextureNode.cpp  TextureNode.h
yans-ui/: CMakeLists.txt  qmldir.in  yans-ui.h.in
yans-ui/cmake/: source.cmake
yans-ui/cmake/source/: quick.cmake  render.cmake
yans-ui/src/: YansUIPlugin.cpp  YansUIPlugin.h
yans-ui/src/quick/: GameItem.cpp  GameItem.h
yans-ui/src/render/detail/: GameRenderer.cpp  GameRenderer.h  RenderThread.cpp  RenderThread.h  TextureNode.cpp  TextureNode.h
